src/acts/adl/adlParser.cpp

// Generated from .\grammar\adl.g4 by ANTLR 4.13.0


#include "adlVisitor.h"

#include "adlParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct AdlParserStaticData final {
  AdlParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  AdlParserStaticData(const AdlParserStaticData&) = delete;
  AdlParserStaticData(AdlParserStaticData&&) = delete;
  AdlParserStaticData& operator=(const AdlParserStaticData&) = delete;
  AdlParserStaticData& operator=(AdlParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag adlParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
AdlParserStaticData *adlParserStaticData = nullptr;

void adlParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (adlParserStaticData != nullptr) {
    return;
  }
#else
  assert(adlParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<AdlParserStaticData>(
    std::vector<std::string>{
      "prog", "def", "root_def", "include_def", "align_def", "type_def", 
      "struct_def", "flag_def", "enum_def", "struct_members", "enum_members", 
      "struct_member", "data_member", "data_operator", "enum_member", "idf", 
      "number"
    },
    std::vector<std::string>{
      "", "';'", "'#root'", "'#include'", "'#align'", "'typedef'", "'struct'", 
      "'align'", "'('", "')'", "'size'", "'{'", "'}'", "'flag'", "':'", 
      "'enum'", "','", "'*'", "'['", "']'", "'$padding'", "'$assert_offset'", 
      "'='"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "NEWLINE", "WHITESPACE", "INTEGER10", "INTEGER16", 
      "INTEGER8", "INTEGER2", "BOOL_VALUE", "IDENTIFIER", "STRING"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  adlParserStaticData = staticData.release();
}

}

adlParser::adlParser(TokenStream *input) : adlParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

adlParser::adlParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  adlParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *adlParserStaticData->atn, adlParserStaticData->decisionToDFA, adlParserStaticData->sharedContextCache, options);
}

adlParser::~adlParser() {
  delete _interpreter;
}

const atn::ATN& adlParser::getATN() const {
  return *adlParserStaticData->atn;
}

std::string adlParser::getGrammarFileName() const {
  return "adl.g4";
}

const std::vector<std::string>& adlParser::getRuleNames() const {
  return adlParserStaticData->ruleNames;
}

const dfa::Vocabulary& adlParser::getVocabulary() const {
  return adlParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView adlParser::getSerializedATN() const {
  return adlParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

adlParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* adlParser::ProgContext::EOF() {
  return getToken(adlParser::EOF, 0);
}

std::vector<adlParser::DefContext *> adlParser::ProgContext::def() {
  return getRuleContexts<adlParser::DefContext>();
}

adlParser::DefContext* adlParser::ProgContext::def(size_t i) {
  return getRuleContext<adlParser::DefContext>(i);
}


size_t adlParser::ProgContext::getRuleIndex() const {
  return adlParser::RuleProg;
}


std::any adlParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<adlVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

adlParser::ProgContext* adlParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, adlParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(37);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 41084) != 0)) {
      setState(34);
      def();
      setState(39);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(40);
    match(adlParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefContext ------------------------------------------------------------------

adlParser::DefContext::DefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

adlParser::Struct_defContext* adlParser::DefContext::struct_def() {
  return getRuleContext<adlParser::Struct_defContext>(0);
}

adlParser::Flag_defContext* adlParser::DefContext::flag_def() {
  return getRuleContext<adlParser::Flag_defContext>(0);
}

adlParser::Enum_defContext* adlParser::DefContext::enum_def() {
  return getRuleContext<adlParser::Enum_defContext>(0);
}

adlParser::Root_defContext* adlParser::DefContext::root_def() {
  return getRuleContext<adlParser::Root_defContext>(0);
}

adlParser::Align_defContext* adlParser::DefContext::align_def() {
  return getRuleContext<adlParser::Align_defContext>(0);
}

adlParser::Type_defContext* adlParser::DefContext::type_def() {
  return getRuleContext<adlParser::Type_defContext>(0);
}

adlParser::Include_defContext* adlParser::DefContext::include_def() {
  return getRuleContext<adlParser::Include_defContext>(0);
}


size_t adlParser::DefContext::getRuleIndex() const {
  return adlParser::RuleDef;
}


std::any adlParser::DefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<adlVisitor*>(visitor))
    return parserVisitor->visitDef(this);
  else
    return visitor->visitChildren(this);
}

adlParser::DefContext* adlParser::def() {
  DefContext *_localctx = _tracker.createInstance<DefContext>(_ctx, getState());
  enterRule(_localctx, 2, adlParser::RuleDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case adlParser::T__5: {
        setState(42);
        struct_def();
        break;
      }

      case adlParser::T__12: {
        setState(43);
        flag_def();
        break;
      }

      case adlParser::T__14: {
        setState(44);
        enum_def();
        break;
      }

      case adlParser::T__1: {
        setState(45);
        root_def();
        break;
      }

      case adlParser::T__3: {
        setState(46);
        align_def();
        break;
      }

      case adlParser::T__4: {
        setState(47);
        type_def();
        break;
      }

      case adlParser::T__2: {
        setState(48);
        include_def();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(51);
    match(adlParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Root_defContext ------------------------------------------------------------------

adlParser::Root_defContext::Root_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

adlParser::IdfContext* adlParser::Root_defContext::idf() {
  return getRuleContext<adlParser::IdfContext>(0);
}


size_t adlParser::Root_defContext::getRuleIndex() const {
  return adlParser::RuleRoot_def;
}


std::any adlParser::Root_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<adlVisitor*>(visitor))
    return parserVisitor->visitRoot_def(this);
  else
    return visitor->visitChildren(this);
}

adlParser::Root_defContext* adlParser::root_def() {
  Root_defContext *_localctx = _tracker.createInstance<Root_defContext>(_ctx, getState());
  enterRule(_localctx, 4, adlParser::RuleRoot_def);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    match(adlParser::T__1);
    setState(54);
    idf();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Include_defContext ------------------------------------------------------------------

adlParser::Include_defContext::Include_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* adlParser::Include_defContext::STRING() {
  return getToken(adlParser::STRING, 0);
}


size_t adlParser::Include_defContext::getRuleIndex() const {
  return adlParser::RuleInclude_def;
}


std::any adlParser::Include_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<adlVisitor*>(visitor))
    return parserVisitor->visitInclude_def(this);
  else
    return visitor->visitChildren(this);
}

adlParser::Include_defContext* adlParser::include_def() {
  Include_defContext *_localctx = _tracker.createInstance<Include_defContext>(_ctx, getState());
  enterRule(_localctx, 6, adlParser::RuleInclude_def);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    match(adlParser::T__2);
    setState(57);
    match(adlParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Align_defContext ------------------------------------------------------------------

adlParser::Align_defContext::Align_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

adlParser::NumberContext* adlParser::Align_defContext::number() {
  return getRuleContext<adlParser::NumberContext>(0);
}


size_t adlParser::Align_defContext::getRuleIndex() const {
  return adlParser::RuleAlign_def;
}


std::any adlParser::Align_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<adlVisitor*>(visitor))
    return parserVisitor->visitAlign_def(this);
  else
    return visitor->visitChildren(this);
}

adlParser::Align_defContext* adlParser::align_def() {
  Align_defContext *_localctx = _tracker.createInstance<Align_defContext>(_ctx, getState());
  enterRule(_localctx, 8, adlParser::RuleAlign_def);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(59);
    match(adlParser::T__3);
    setState(60);
    number();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Type_defContext ------------------------------------------------------------------

adlParser::Type_defContext::Type_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<adlParser::IdfContext *> adlParser::Type_defContext::idf() {
  return getRuleContexts<adlParser::IdfContext>();
}

adlParser::IdfContext* adlParser::Type_defContext::idf(size_t i) {
  return getRuleContext<adlParser::IdfContext>(i);
}


size_t adlParser::Type_defContext::getRuleIndex() const {
  return adlParser::RuleType_def;
}


std::any adlParser::Type_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<adlVisitor*>(visitor))
    return parserVisitor->visitType_def(this);
  else
    return visitor->visitChildren(this);
}

adlParser::Type_defContext* adlParser::type_def() {
  Type_defContext *_localctx = _tracker.createInstance<Type_defContext>(_ctx, getState());
  enterRule(_localctx, 10, adlParser::RuleType_def);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    match(adlParser::T__4);
    setState(63);
    idf();
    setState(64);
    idf();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Struct_defContext ------------------------------------------------------------------

adlParser::Struct_defContext::Struct_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

adlParser::IdfContext* adlParser::Struct_defContext::idf() {
  return getRuleContext<adlParser::IdfContext>(0);
}

adlParser::Struct_membersContext* adlParser::Struct_defContext::struct_members() {
  return getRuleContext<adlParser::Struct_membersContext>(0);
}

std::vector<adlParser::NumberContext *> adlParser::Struct_defContext::number() {
  return getRuleContexts<adlParser::NumberContext>();
}

adlParser::NumberContext* adlParser::Struct_defContext::number(size_t i) {
  return getRuleContext<adlParser::NumberContext>(i);
}


size_t adlParser::Struct_defContext::getRuleIndex() const {
  return adlParser::RuleStruct_def;
}


std::any adlParser::Struct_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<adlVisitor*>(visitor))
    return parserVisitor->visitStruct_def(this);
  else
    return visitor->visitChildren(this);
}

adlParser::Struct_defContext* adlParser::struct_def() {
  Struct_defContext *_localctx = _tracker.createInstance<Struct_defContext>(_ctx, getState());
  enterRule(_localctx, 12, adlParser::RuleStruct_def);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(adlParser::T__5);
    setState(72);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == adlParser::T__6) {
      setState(67);
      match(adlParser::T__6);
      setState(68);
      match(adlParser::T__7);
      setState(69);
      number();
      setState(70);
      match(adlParser::T__8);
    }
    setState(79);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == adlParser::T__9) {
      setState(74);
      match(adlParser::T__9);
      setState(75);
      match(adlParser::T__7);
      setState(76);
      number();
      setState(77);
      match(adlParser::T__8);
    }
    setState(81);
    idf();
    setState(82);
    match(adlParser::T__10);
    setState(83);
    struct_members();
    setState(84);
    match(adlParser::T__11);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Flag_defContext ------------------------------------------------------------------

adlParser::Flag_defContext::Flag_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<adlParser::IdfContext *> adlParser::Flag_defContext::idf() {
  return getRuleContexts<adlParser::IdfContext>();
}

adlParser::IdfContext* adlParser::Flag_defContext::idf(size_t i) {
  return getRuleContext<adlParser::IdfContext>(i);
}

adlParser::Enum_membersContext* adlParser::Flag_defContext::enum_members() {
  return getRuleContext<adlParser::Enum_membersContext>(0);
}


size_t adlParser::Flag_defContext::getRuleIndex() const {
  return adlParser::RuleFlag_def;
}


std::any adlParser::Flag_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<adlVisitor*>(visitor))
    return parserVisitor->visitFlag_def(this);
  else
    return visitor->visitChildren(this);
}

adlParser::Flag_defContext* adlParser::flag_def() {
  Flag_defContext *_localctx = _tracker.createInstance<Flag_defContext>(_ctx, getState());
  enterRule(_localctx, 14, adlParser::RuleFlag_def);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(adlParser::T__12);
    setState(87);
    idf();
    setState(88);
    match(adlParser::T__13);
    setState(89);
    idf();
    setState(90);
    match(adlParser::T__10);
    setState(91);
    enum_members();
    setState(92);
    match(adlParser::T__11);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Enum_defContext ------------------------------------------------------------------

adlParser::Enum_defContext::Enum_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<adlParser::IdfContext *> adlParser::Enum_defContext::idf() {
  return getRuleContexts<adlParser::IdfContext>();
}

adlParser::IdfContext* adlParser::Enum_defContext::idf(size_t i) {
  return getRuleContext<adlParser::IdfContext>(i);
}

adlParser::Enum_membersContext* adlParser::Enum_defContext::enum_members() {
  return getRuleContext<adlParser::Enum_membersContext>(0);
}


size_t adlParser::Enum_defContext::getRuleIndex() const {
  return adlParser::RuleEnum_def;
}


std::any adlParser::Enum_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<adlVisitor*>(visitor))
    return parserVisitor->visitEnum_def(this);
  else
    return visitor->visitChildren(this);
}

adlParser::Enum_defContext* adlParser::enum_def() {
  Enum_defContext *_localctx = _tracker.createInstance<Enum_defContext>(_ctx, getState());
  enterRule(_localctx, 16, adlParser::RuleEnum_def);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(adlParser::T__14);
    setState(95);
    idf();
    setState(96);
    match(adlParser::T__13);
    setState(97);
    idf();
    setState(98);
    match(adlParser::T__10);
    setState(99);
    enum_members();
    setState(100);
    match(adlParser::T__11);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Struct_membersContext ------------------------------------------------------------------

adlParser::Struct_membersContext::Struct_membersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<adlParser::Struct_memberContext *> adlParser::Struct_membersContext::struct_member() {
  return getRuleContexts<adlParser::Struct_memberContext>();
}

adlParser::Struct_memberContext* adlParser::Struct_membersContext::struct_member(size_t i) {
  return getRuleContext<adlParser::Struct_memberContext>(i);
}


size_t adlParser::Struct_membersContext::getRuleIndex() const {
  return adlParser::RuleStruct_members;
}


std::any adlParser::Struct_membersContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<adlVisitor*>(visitor))
    return parserVisitor->visitStruct_members(this);
  else
    return visitor->visitChildren(this);
}

adlParser::Struct_membersContext* adlParser::struct_members() {
  Struct_membersContext *_localctx = _tracker.createInstance<Struct_membersContext>(_ctx, getState());
  enterRule(_localctx, 18, adlParser::RuleStruct_members);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1076887552) != 0)) {
      setState(102);
      struct_member();
      setState(103);
      match(adlParser::T__0);
      setState(109);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Enum_membersContext ------------------------------------------------------------------

adlParser::Enum_membersContext::Enum_membersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<adlParser::Enum_memberContext *> adlParser::Enum_membersContext::enum_member() {
  return getRuleContexts<adlParser::Enum_memberContext>();
}

adlParser::Enum_memberContext* adlParser::Enum_membersContext::enum_member(size_t i) {
  return getRuleContext<adlParser::Enum_memberContext>(i);
}


size_t adlParser::Enum_membersContext::getRuleIndex() const {
  return adlParser::RuleEnum_members;
}


std::any adlParser::Enum_membersContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<adlVisitor*>(visitor))
    return parserVisitor->visitEnum_members(this);
  else
    return visitor->visitChildren(this);
}

adlParser::Enum_membersContext* adlParser::enum_members() {
  Enum_membersContext *_localctx = _tracker.createInstance<Enum_membersContext>(_ctx, getState());
  enterRule(_localctx, 20, adlParser::RuleEnum_members);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(121);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == adlParser::IDENTIFIER

    || _la == adlParser::STRING) {
      setState(110);
      enum_member();
      setState(115);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(111);
          match(adlParser::T__15);
          setState(112);
          enum_member(); 
        }
        setState(117);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
      }
      setState(119);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == adlParser::T__15) {
        setState(118);
        match(adlParser::T__15);
      }
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Struct_memberContext ------------------------------------------------------------------

adlParser::Struct_memberContext::Struct_memberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

adlParser::Data_memberContext* adlParser::Struct_memberContext::data_member() {
  return getRuleContext<adlParser::Data_memberContext>(0);
}

adlParser::Data_operatorContext* adlParser::Struct_memberContext::data_operator() {
  return getRuleContext<adlParser::Data_operatorContext>(0);
}


size_t adlParser::Struct_memberContext::getRuleIndex() const {
  return adlParser::RuleStruct_member;
}


std::any adlParser::Struct_memberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<adlVisitor*>(visitor))
    return parserVisitor->visitStruct_member(this);
  else
    return visitor->visitChildren(this);
}

adlParser::Struct_memberContext* adlParser::struct_member() {
  Struct_memberContext *_localctx = _tracker.createInstance<Struct_memberContext>(_ctx, getState());
  enterRule(_localctx, 22, adlParser::RuleStruct_member);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(125);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case adlParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(123);
        data_member();
        break;
      }

      case adlParser::T__19:
      case adlParser::T__20: {
        enterOuterAlt(_localctx, 2);
        setState(124);
        data_operator();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Data_memberContext ------------------------------------------------------------------

adlParser::Data_memberContext::Data_memberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<adlParser::IdfContext *> adlParser::Data_memberContext::idf() {
  return getRuleContexts<adlParser::IdfContext>();
}

adlParser::IdfContext* adlParser::Data_memberContext::idf(size_t i) {
  return getRuleContext<adlParser::IdfContext>(i);
}

adlParser::NumberContext* adlParser::Data_memberContext::number() {
  return getRuleContext<adlParser::NumberContext>(0);
}


size_t adlParser::Data_memberContext::getRuleIndex() const {
  return adlParser::RuleData_member;
}


std::any adlParser::Data_memberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<adlVisitor*>(visitor))
    return parserVisitor->visitData_member(this);
  else
    return visitor->visitChildren(this);
}

adlParser::Data_memberContext* adlParser::data_member() {
  Data_memberContext *_localctx = _tracker.createInstance<Data_memberContext>(_ctx, getState());
  enterRule(_localctx, 24, adlParser::RuleData_member);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(127);
    idf();
    setState(129);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == adlParser::T__16) {
      setState(128);
      match(adlParser::T__16);
    }
    setState(131);
    idf();
    setState(136);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == adlParser::T__17) {
      setState(132);
      match(adlParser::T__17);
      setState(133);
      number();
      setState(134);
      match(adlParser::T__18);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Data_operatorContext ------------------------------------------------------------------

adlParser::Data_operatorContext::Data_operatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

adlParser::NumberContext* adlParser::Data_operatorContext::number() {
  return getRuleContext<adlParser::NumberContext>(0);
}


size_t adlParser::Data_operatorContext::getRuleIndex() const {
  return adlParser::RuleData_operator;
}


std::any adlParser::Data_operatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<adlVisitor*>(visitor))
    return parserVisitor->visitData_operator(this);
  else
    return visitor->visitChildren(this);
}

adlParser::Data_operatorContext* adlParser::data_operator() {
  Data_operatorContext *_localctx = _tracker.createInstance<Data_operatorContext>(_ctx, getState());
  enterRule(_localctx, 26, adlParser::RuleData_operator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(138);
    _la = _input->LA(1);
    if (!(_la == adlParser::T__19

    || _la == adlParser::T__20)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(139);
    number();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Enum_memberContext ------------------------------------------------------------------

adlParser::Enum_memberContext::Enum_memberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* adlParser::Enum_memberContext::STRING() {
  return getToken(adlParser::STRING, 0);
}

adlParser::IdfContext* adlParser::Enum_memberContext::idf() {
  return getRuleContext<adlParser::IdfContext>(0);
}

adlParser::NumberContext* adlParser::Enum_memberContext::number() {
  return getRuleContext<adlParser::NumberContext>(0);
}


size_t adlParser::Enum_memberContext::getRuleIndex() const {
  return adlParser::RuleEnum_member;
}


std::any adlParser::Enum_memberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<adlVisitor*>(visitor))
    return parserVisitor->visitEnum_member(this);
  else
    return visitor->visitChildren(this);
}

adlParser::Enum_memberContext* adlParser::enum_member() {
  Enum_memberContext *_localctx = _tracker.createInstance<Enum_memberContext>(_ctx, getState());
  enterRule(_localctx, 28, adlParser::RuleEnum_member);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(143);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case adlParser::STRING: {
        setState(141);
        match(adlParser::STRING);
        break;
      }
